--- a/contacts.html
+++ b/contacts.html
@@ -88,7 +88,7 @@
 <div class="row col-sm-4 col-lg-8  
 m-3 p-3  fw-bold  ">
   
-  <a class="fw-bold  text-decoration-none text-secondary"  href="../../index.html">Back to Home</a>
+  <a class="fw-bold  text-decoration-none text-secondary"  href="index.html">Back to Home</a>
   </div>
 
   
@@ -96,7 +96,7 @@ m-3 p-3  fw-bold  ">
 m-3 p-3  fw-bold fst-italic ">
 
   
-  <a class="fw-bold  text-decoration-none text-secondary"  href="../packages.html">Back to Packages</a>
+  <a class="fw-bold  text-decoration-none text-secondary"  href="packages.html">Back to Packages</a>
 </div>
 <div class="row col-sm-4 col-lg-8  
 m-3 p-3  fw-bold fst-italic">
