--- a/itinerary1.html
+++ b/itinerary1.html
@@ -973,7 +973,7 @@
       <div class="row col-sm-4 col-lg-8  
       m-3 p-3  fw-bold fst-italic ">
      <div>
-        <a class="fw-bold  text-decoration-none text-secondary"  href="../../../index.html">Back to Home</a>
+        <a class="fw-bold  text-decoration-none text-secondary"  href="index.html">Back to Home</a>
     </div>
 </div>
 
@@ -981,7 +981,7 @@
     m-3 p-3  fw-bold fst-italic ">
    
     <div>
-        <a class="fw-bold  text-decoration-none text-secondary" href="../../packages.html">Back to Packages</a>
+        <a class="fw-bold  text-decoration-none text-secondary" href="packages.html">Back to Packages</a>
     </div>
     </div>
 
@@ -989,7 +989,7 @@
     m-3 p-3  fw-bold fst-italic ">
    
     <div>
-        <a class="fw-bold  text-decoration-none text-secondary" href="../contacts.html">Back to Contacts</a>
+        <a class="fw-bold  text-decoration-none text-secondary" href="contacts.html">Back to Contacts</a>
     </div>
     </div>
 
