--- a/itinerary2.html
+++ b/itinerary2.html
@@ -702,7 +702,7 @@ alt="love my fucking self">
    
         <div>
             <a class="fw-bold  text-decoration-none text-secondary" 
-            href="../../../../index.html">Back to Home</a>
+            href="index.html">Back to Home</a>
         </div>
       </div>
 
@@ -710,21 +710,21 @@ alt="love my fucking self">
       m-3 p-3  fw-bold fst-italic ">
         <div>
             <a class="fw-bold  text-decoration-none text-secondary" 
-            href="../../../packages.html">Back to Packages</a>
+            href="packages.html">Back to Packages</a>
         </div>
         </div>
 
         <div class="row col-sm-4 col-lg-8  
       m-3 p-3  fw-bold fst-italic ">
         <div>
-            <a class="fw-bold  text-decoration-none text-secondary" href="../../contacts.html">Back to Contacts</a>
+            <a class="fw-bold  text-decoration-none text-secondary" href="contacts.html">Back to Contacts</a>
         </div>
         </div>
 
         <div class="row col-sm-4 col-lg-8  
       m-3 p-3  fw-bold fst-italic ">
         <div>
-            <a class="fw-bold  text-decoration-none text-secondary" href="../itinerary1.html">Back to itinerary1</a>
+            <a class="fw-bold  text-decoration-none text-secondary" href="itinerary1.html">Back to itinerary1</a>
         
         </div>
         </div>
